fixed spacings

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 .text-box {
-  height: 250px;
+  height: 290px;
 }
 
 .title {
